# bench-gauntlet

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  targets.example.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
batteries/: README.md  classify.yaml  code-debug.yaml  code-gen.yaml  commit-msg.yaml  extract-json.yaml  reasoning.yaml  summarize-short.yaml
cases/classify/: route-billing.txt  route-technical.txt  sentiment-neg.txt  sentiment-neutral.txt  sentiment-pos.txt  topic-tech.txt  (+2 more)
docs/: 2026-06-11-gauntlet-design.md  2026-06-12-gauntlet-build-design.md  2026-06-30-discriminative-scoring-v2-seed.md  decisions.md
gauntlet/: baseline.py  battery.py  cli.py  client.py  config.py  errors.py  models.py  orchestrate.py  pricing.py  runner.py  scorecard.py  sequencer.py
tests/: helpers.py  test_add_case.py  test_baseline.py  test_battery.py  test_cli_advanced.py  test_cli_report.py  test_cli_run.py  test_cli_targets.py  test_client.py  test_config_load.py  test_config_models.py  test_context_depth.py  test_embed.py  test_enrich_lmstudio.py  test_enrich_ollama.py  test_errors.py  test_models.py  test_orchestrate.py  test_runner_assemble.py  test_runner_cell.py  test_runner_checkpoint.py  test_runner_execute.py  test_scorecard_aggregate.py  test_scorecard_json.py  test_scorecard_markdown.py  test_scorecard_merge.py  test_scoring_dispatch.py  test_scoring_exact.py  test_scoring_judge.py  test_scoring_schema.py  test_seed_batteries.py  test_sequencer.py  test_smoke.py
(+69 files in other folders)
