[project]
name = "bench-gauntlet"
version = "0.5.0"
description = "A gauntlet of trials for local models"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Rank" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gauntlet = "gauntlet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gauntlet"]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit a real OpenAI-compatible endpoint (opt-in: -m live)",
]
addopts = "-m 'not live'"
